# inertia-generic

./: Cargo.toml  README.md  TODO.md
examples/: wrapping.rs
src/: lib.rs  macros.rs  mat.rs  poly.rs
src/mat/: generic.rs  ops.rs
src/mat/generic/: ops.rs
src/matrix/: genmatspace.rs  matspace.rs
src/matrix/matspace/: ops.rs
src/poly/: coerce.rs  delete.rs  generic.rs  ops.rs
src/poly/generic/: coerce.rs  ops.rs
