[package]
name = "inertia-generic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
inertia-algebra = { path = "../inertia-algebra", version="0.1" }

[dependencies.serde]
optional = true
version = "1.0"
features = ["derive"]
